--- a/VirusNetwork/MainWindow.xaml
+++ b/VirusNetwork/MainWindow.xaml
@@ -7,8 +7,9 @@
 		<Label Content="IP" HorizontalAlignment="Left" Margin="10,31,0,0" VerticalAlignment="Top"/>
 		<TextBox x:Name="IpBox" HorizontalAlignment="Left" Height="23" Margin="68,33,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="106"/>
 		<Button x:Name="StartButton" Content="Connect" HorizontalAlignment="Left" Margin="68,7,0,0" VerticalAlignment="Top" Width="106" Click="StartButton_Click"/>
-		<TextBlock x:Name="InTextBox" HorizontalAlignment="Left" Margin="13,93,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="217" Width="161"/>
-		<Button x:Name="SendButton" Content="Send" HorizontalAlignment="Left" Margin="10,61,0,0" VerticalAlignment="Top" Width="75" Click="SendButton_Click"/>
+		<TextBlock x:Name="InTextBox" HorizontalAlignment="Left" Margin="13,62,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="179" Width="161"/>
+		<Button x:Name="SendButton" Content="Send" HorizontalAlignment="Left" Margin="13,281,0,0" VerticalAlignment="Top" Width="161" Click="SendButton_Click"/>
+		<TextBox x:Name="messageBox" HorizontalAlignment="Left" Height="30" Margin="13,246,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="161"/>
 
 	</Grid>
 </Window>
