--- a/VirusNetwork/MainWindow.xaml
+++ b/VirusNetwork/MainWindow.xaml
@@ -1,11 +1,12 @@
 ﻿<Window x:Class="VirusNetwork.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+				Closing="MainWindow_Closing"
+        Title="Virus" Height="350" Width="525">
 	<Grid>
 		<CheckBox x:Name="MasterCheckbox" Content="Master" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Checked="MasterCheckbox_Checked" Unchecked="MasterCheckbox_UnChecked"/>
 		<Label Content="IP" HorizontalAlignment="Left" Margin="10,31,0,0" VerticalAlignment="Top"/>
-		<TextBox x:Name="IpBox" HorizontalAlignment="Left" Height="23" Margin="68,33,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="106"/>
+		<TextBox x:Name="IpBox" HorizontalAlignment="Left" Height="23" Margin="68,33,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="106" UndoLimit="10" MaxLength="15"/>
 		<Button x:Name="StartButton" Content="Connect" HorizontalAlignment="Left" Margin="68,7,0,0" VerticalAlignment="Top" Width="106" Click="StartButton_Click"/>
 		<TextBlock x:Name="InTextBox" HorizontalAlignment="Left" Margin="13,62,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="179" Width="161"/>
 		<Button x:Name="SendButton" Content="Send" HorizontalAlignment="Left" Margin="13,281,0,0" VerticalAlignment="Top" Width="161" Click="SendButton_Click"/>
