--- a/VirusNetwork/MainWindow.xaml
+++ b/VirusNetwork/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 				Closing="MainWindow_Closing"
-        Title="Virus" Height="400" Width="525" Loaded="Window_Loaded">
+        Title="Virus" Height="410" Width="525" Loaded="Window_Loaded">
 	<Grid>
 		<CheckBox x:Name="MasterCheckbox" Content="Master" HorizontalAlignment="Left" Margin="10,69,0,0" VerticalAlignment="Top" Checked="MasterCheckbox_Checked" Unchecked="MasterCheckbox_UnChecked"/>
 		<Label Content="IP" HorizontalAlignment="Left" Margin="10,90,0,0" VerticalAlignment="Top"/>
@@ -10,13 +10,13 @@
 		<Button x:Name="StartButton" Content="Connect" HorizontalAlignment="Left" Margin="68,66,0,0" VerticalAlignment="Top" Width="103" Click="StartButton_Click"/>
 		<Button x:Name="SendButton" Content="Send" HorizontalAlignment="Left" Margin="10,0,0,37" VerticalAlignment="Bottom" Width="161" Click="SendButton_Click"/>
 		<TextBox x:Name="messageBox" HorizontalAlignment="Left" Margin="10,0,0,64" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="161" MaxLength="1000" Height="22" KeyDown="messageBox_keyDown"/>
+		<Button x:Name="ReadyButton" Content="Ready" HorizontalAlignment="Left" Margin="10,0,0,7" VerticalAlignment="Bottom" Width="89" Click="ReadyButton_Click" IsEnabled="False"/>
+		<Label x:Name="ReadyLabel" Content="Not ready" HorizontalAlignment="Left" Margin="104,0,0,7" VerticalAlignment="Bottom" Width="67"/>
 		<TextBox x:Name="PlayerNameBox" HorizontalAlignment="Left" Height="23" Margin="10,38,0,0" TextWrapping="Wrap" Text="Player1" VerticalAlignment="Top" Width="161" MaxLines="1" MaxLength="12" LostFocus="PlayerNameBox_LostFocus"/>
 		<ScrollViewer HorizontalAlignment="Left" Margin="13,126,0,91" VerticalAlignment="Stretch" Width="158">
 			<TextBlock x:Name="InTextBox" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="142"/>
 		</ScrollViewer>
 		<Grid x:Name="VirusGrid" HorizontalAlignment="Stretch" Margin="176,10,10,10" VerticalAlignment="Stretch"/>
-		<Button x:Name="ReadyButton" Content="Ready" HorizontalAlignment="Left" Margin="10,338,0,0" VerticalAlignment="Top" Width="89" Click="ReadyButton_Click" IsEnabled="False"/>
-		<Label x:Name="ReadyLabel" Content="Not ready" HorizontalAlignment="Left" Margin="104,336,0,0" VerticalAlignment="Top" Width="67"/>
 		<RadioButton x:Name="greenColor" Content="" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Background="Lime" BorderBrush="Lime" Foreground="Lime" GroupName="Colours" Checked="greenColor_Checked"/>
 		<RadioButton x:Name="redColor" Content="" HorizontalAlignment="Left" Margin="31,10,0,0" VerticalAlignment="Top" Background="Red" BorderBrush="Red" Foreground="Red" GroupName="Colours" Checked="redColor_Checked"/>
 		<RadioButton x:Name="goldColor" Content="" HorizontalAlignment="Left" Margin="52,10,0,0" VerticalAlignment="Top" Background="Gold" BorderBrush="Gold" Foreground="Gold" GroupName="Colours" Checked="goldColor_Checked"/>
