--- a/VirusNetwork/MainWindow.xaml
+++ b/VirusNetwork/MainWindow.xaml
@@ -13,8 +13,8 @@
 		<Button x:Name="ReadyButton" Content="Ready" HorizontalAlignment="Left" Margin="10,0,0,10" VerticalAlignment="Bottom" Width="89" Click="ReadyButton_Click" IsEnabled="False"/>
 		<Label x:Name="ReadyLabel" Content="Not ready" HorizontalAlignment="Left" Margin="189,0,0,8" VerticalAlignment="Bottom" Width="67"/>
 		<TextBox x:Name="PlayerNameBox" HorizontalAlignment="Left" Height="23" Margin="10,38,0,0" TextWrapping="Wrap" Text="Player1" VerticalAlignment="Top" Width="246" MaxLines="1" MaxLength="24" LostFocus="PlayerNameBox_LostFocus"/>
-		<ScrollViewer HorizontalAlignment="Left" Margin="13,126,0,97" VerticalAlignment="Stretch" Width="243">
-			<TextBlock x:Name="InTextBox" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="223"/>
+		<ScrollViewer x:Name="TextScrollViewer" HorizontalAlignment="Left" Margin="13,126,0,97" VerticalAlignment="Stretch" Width="243">
+			<TextBlock x:Name="InTextBox" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="225"/>
 		</ScrollViewer>
 		<Grid x:Name="VirusGrid" HorizontalAlignment="Stretch" Margin="261,10,10,10" VerticalAlignment="Stretch"/>
 		<RadioButton x:Name="greenColor" Content="" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Background="Lime" BorderBrush="Lime" Foreground="Lime" GroupName="Colours" Checked="greenColor_Checked"/>
